fix: update route handles for users appointments
